--- a/css/moderation_sidebar.css
+++ b/css/moderation_sidebar.css
@@ -32,3 +32,15 @@
   width: 100%;
   height: 30px;
 }
+
+.moderation-sidebar-info {
+  margin-bottom: 10px;
+}
+
+.ui-dialog-offcanvas .moderation-sidebar-info h2 {
+  font-size: 16px;
+}
+
+.ui-dialog-offcanvas .moderation-sidebar-info p {
+  margin-bottom: .5em;
+}
