Made each transition a button and cleaned up styling.

--- a/css/moderation_sidebar.css
+++ b/css/moderation_sidebar.css
@@ -2,30 +2,26 @@
   background-image: url(../images/icon.png);
 }
 
-/* Full width magic buttons. */
 .moderation-sidebar-actions {
-  margin-left: -20px;
-  width: calc(100% + 40px);
+
 }
 
 .ui-dialog-offcanvas .moderation-sidebar-link,
 .ui-dialog-offcanvas .moderation-sidebar-link:visited,
 .ui-dialog-offcanvas .moderation-sidebar-link.button {
   display: block;
-  background: #7b7b7b;
-  width: 100%;
+  margin: 0 0 8px 0;
+  padding: 10px 0 10px 0;
   color: white;
-  margin: 0 0 2px 0;
-  padding: 10px;
-  border-radius: 0;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  border: 0;
+  border-radius: 2px;
   text-align: center;
-  transition: .2s;
-  border: 1px solid #989898;
 }
 
 .ui-dialog-offcanvas .moderation-sidebar-link:hover {
-  background: #888;
   color: white;
+  box-shadow: 0 1px 5px rgba(0,0,0,0.25), 0 1px 6px rgba(0,0,0,0.22);
 }
 
 .quick-moderation-form select {
