Added ability to "delete" drafts.

--- a/css/moderation_sidebar.css
+++ b/css/moderation_sidebar.css
@@ -22,6 +22,15 @@
   color: white;
 }
 
+.ui-dialog-offcanvas .moderation-sidebar-link.button--danger {
+  background: #bd2727;
+}
+
+.ui-dialog-offcanvas .moderation-sidebar-link.button--danger:hover,
+.ui-dialog-offcanvas .moderation-sidebar-link.button--danger:focus {
+  background: #da2e2e;
+}
+
 .quick-moderation-form select {
   width: 100%;
   height: 30px;
